--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -75,20 +75,25 @@ body.menu-open {
 }
 
 nav {
-  display: none;
+  display: flex;
   font-size: 2rem;
   justify-content: center;
   flex-direction: column;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
 
   &.open {
-    display: flex;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
     background: var(--alt-black);
     z-index: 10;
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
   }
 
 
@@ -97,11 +102,17 @@ nav {
   }
 
   #navigation {
-    padding: 45px 7%;
+    // padding: 45px 7%;
+    max-width: 1600px;
+    margin: 0px auto;
+    padding-left: 7%;
+    padding-right: 7%;
+    width: calc(100% - 14%);
   }
 
   a {
     color: white;
+    user-select: none;
 
     &:after {
       background: transparent;
