--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -30,7 +30,7 @@ body.menu-open {
     position: absolute;
     height: 2px;
     width: 100%;
-    background: var(--alt-black);
+    background: var(--black);
     border-radius: 9px;
     opacity: 1;
     left: 0;
