adding emjoi for active state

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -109,6 +109,16 @@ nav {
     color: white;
     user-select: none;
 
+    span {
+      display: none;
+    }
+
+    &[aria-current="page"] {
+      span {
+        display: inline-block;
+      }
+    }
+
     &:after {
       background: transparent;
     }
