--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -4,12 +4,12 @@
   -webkit-overflow-scrolling: touch;
   display: grid;
   grid-gap: 0px;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
 
   @include breakpoint(medium) {
 	grid-gap: 15px;
-    margin-top: 3rem;
+    margin-top: 2rem;
     margin-bottom: 3rem;
 	grid-template-columns: repeat(2, 1fr);
   }
