--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -286,6 +286,7 @@
 	video {
 		width: 100%    !important;
 		height: auto   !important;
+		box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
 	}
 }
 
