--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -76,7 +76,6 @@ body.menu-open {
 
 nav {
   display: flex;
-  // font-size: min(max(2rem, 7vw), 6rem);
   font-size: 3rem;
   justify-content: center;
   flex-direction: column;
@@ -84,7 +83,8 @@ nav {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.33s, opacity 0.33s linear;
