--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -85,6 +85,8 @@ nav {
   width: 100%;
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  min-height: -moz-available;
+  min-height: fill-available;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.33s, opacity 0.33s linear;
