--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -86,7 +86,7 @@ nav {
   min-height: 100vh;
   min-height: -webkit-fill-available;
   min-height: -moz-available;
-  min-height: fill-available;
+  min-height: stretch;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.33s, opacity 0.33s linear;
