nav and npm updates

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -129,6 +129,10 @@ nav {
       span {
         display: inline-block;
       }
+
+      &:hover {
+        color: inherit;
+      }
     }
 
     &:after {
