--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -34,10 +34,10 @@
 		grid-column: 1 / 1;
 	}
 
-	> * {
-		background: rgba(0,0,0,0.1);
-		border: 1px white solid;
-	  }
+	// > * {
+	// 	background: rgba(0,0,0,0.1);
+	// 	border: 1px white solid;
+	//   }
 
 }
 
@@ -98,7 +98,7 @@
 			right: 0;
 			bottom: 0;
 			opacity: .5;
-			background: linear-gradient(30deg, rgba(71, 26, 99, 0.85), rgb(75, 22, 76));
+			background: var(--image-gradient);
 			transition-property: opacity;
 			transition-delay: $delay;
 		}
@@ -149,6 +149,7 @@
 	}
 
 	h2 {
+		color: white !important;
 		@extend .h3;
 		margin-bottom: 0 !important;
 		line-height: 1.2;
@@ -194,7 +195,7 @@
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-gap: 30px;
-		border-bottom: 1px solid var(--grey);
+		border-bottom: 1px solid var(--border-color);
 		padding: 2rem 0;
 		@include breakpoint(large) {
 			grid-auto-rows: 1fr;
@@ -203,7 +204,7 @@
 		}
 
 		&:first-of-type {
-			border-top: 1px solid var(--grey);
+			border-top: 1px solid var(--border-color);
 			margin-top: 3rem;
 		}
 
@@ -264,7 +265,7 @@
 .portfolio-wrapper {
 	padding: 1rem 0;
 	width: 100%;
-	border-top: 1px solid var(--grey);
+	border-top: 1px solid var(--border-color);
 	@include breakpoint(large) {
 		padding: 2rem 0;
 		border-top: 0 none;
@@ -292,7 +293,7 @@
 
 .section__services {
 	margin-bottom: 2.5rem;
-    border-bottom: 1px solid var(--grey);
+    border-bottom: 1px solid var(--border-color);
 	padding-bottom: 2.5rem;
 	@include breakpoint(medium) {
 		border-bottom: 0 none;
@@ -382,7 +383,7 @@
 }
 
 .other-projects {
-	border-top: 1px solid var(--grey);
+	border-top: 1px solid var(--border-color);
 	margin-top: 2rem;
 	margin-bottom: 0rem;
 	@include breakpoint(large) {
