--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -13,8 +13,86 @@ header {
   }
 }
 
-body.menu-open {
+body#menu-open {
   overflow: hidden;
+}
+
+.theme-changer-wrapper {
+  margin-left: auto;
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+.theme-changer,body.dark .gg-moon,body.light .gg-sun {
+  display: none
+}
+
+.mode-container {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.gg-sun {
+  position: relative;
+  transform: scale(var(--ggs,1));
+  height: 24px;
+  background: linear-gradient(180deg,currentColor 4px,transparent 0) no-repeat 5px -6px/2px 6px,linear-gradient(180deg,currentColor 4px,transparent 0) no-repeat 5px 14px/2px 6px,linear-gradient(180deg,currentColor 4px,transparent 0) no-repeat -8px 5px/6px 2px,linear-gradient(180deg,currentColor 4px,transparent 0) no-repeat 14px 5px/6px 2px;
+  border-radius: 100px;
+  box-shadow: inset 0 0 0 2px;
+  border: 6px solid transparent;
+}
+
+.gg-sun,.gg-sun:after,.gg-sun:before {
+  box-sizing: border-box;
+  display: block;
+  width: 24px
+}
+
+.gg-sun:after,.gg-sun:before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  border-right: 4px solid;
+  border-left: 4px solid;
+  left: -6px;
+  top: 5px
+}
+
+.gg-sun:before {
+  transform: rotate(-45deg)
+}
+
+.gg-sun:after {
+  transform: rotate(45deg)
+}
+
+.gg-moon,.gg-moon:after {
+  display: block;
+  box-sizing: border-box;
+  border-radius: 50%
+}
+
+.gg-moon {
+  overflow: hidden;
+  position: relative;
+  transform: rotate(-135deg) scale(var(--ggs,1));
+  width: 20px;
+  height: 20px;
+  border: 2px solid;
+  border-bottom: 2px solid transparent;
+}
+
+.gg-moon:after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 18px;
+  border: 2px solid transparent;
+  box-shadow: 0 0 0 2px;
+  top: 8px;
+  left: 2px
 }
 
 .navbutton {
@@ -30,7 +108,7 @@ body.menu-open {
     position: absolute;
     height: 2px;
     width: 100%;
-    background: var(--black);
+    background: var(--nav-button);
     border-radius: 9px;
     opacity: 1;
     left: 0;
@@ -92,7 +170,7 @@ nav {
   transition: visibility 0s linear 0s, opacity 0s linear;
 
   &.open {
-    background: var(--grey);
+    background: var(--nav-bg);
     z-index: 10;
     visibility: visible;
     opacity: 1;
@@ -148,7 +226,7 @@ nav {
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: -1.5px;
-  background: linear-gradient(#fff0, #fff0) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), var(--primary-colour), #651fff) border-box;
+  background: var(--logo-color);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -163,7 +241,7 @@ nav {
   user-select: none;
   &:hover {
     text-decoration: none;
-    background: linear-gradient(#fff0, #fff0) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), var(--primary-colour), #651fff) border-box;
+    background: var(--logo-color);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
