--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -24,6 +24,8 @@
   --svg-fill-color:       rgb(57, 53, 49);
   --button-bg:            rgb(244, 0, 136);
   --button-text-color:    #fff;
+  --form-color:           #fff;
+  --form-text-color:      rgb(57, 53, 49);
 }
 
 :root body.dark {
@@ -39,6 +41,8 @@
   --svg-fill-color:       hsla(0,0%,100%,0.6);
   --button-bg:            hsl(140, 100%, 76%);
   --button-text-color:    #1e1e1e;
+  --form-color:           hsla(0,0%,100%,0.6);
+  --form-text-color:      rgb(57, 53, 49);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,6 +59,8 @@
     --svg-fill-color:       hsla(0,0%,100%,0.6);
     --button-bg:            hsl(140, 100%, 76%);
     --button-text-color:    #1e1e1e;
+    --form-color:           #fff;
+    --form-text-color:      rgb(57, 53, 49);
   }
 
   :root body.light {
@@ -78,6 +84,8 @@
     --svg-fill-color:       rgb(57, 53, 49);
     --button-bg:            rgb(244, 0, 136);
     --button-text-color:    #fff;
+    --form-color:           hsla(0,0%,100%,0.6);
+    --form-text-color:      rgb(57, 53, 49);
   }
 }
 
