--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -4,7 +4,7 @@
   -webkit-overflow-scrolling: touch;
   display: grid;
   grid-gap: 15px;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-auto-rows: 1fr;
 
   @include breakpoint(medium) {
@@ -261,9 +261,8 @@
 	}
 
 .portfolio-wrapper {
-	padding: 1rem 0;
+	padding: .8rem 0;
 	width: 100%;
-	border-top: 1px solid var(--border-color);
 	@include breakpoint(large) {
 		padding: 2rem 0;
 		border-top: 0 none;
@@ -357,9 +356,10 @@
 	display: grid;
 	width: 100%;
 	grid-template-columns: repeat(2, 1fr);
+	grid-gap: .8em;
 	@include breakpoint(large) {
 		grid-template-columns: repeat(4, 1fr);
-		grid-column-gap: 1rem;
+		grid-gap: 1em;
 		width: 70%;
 	}
 
@@ -368,13 +368,9 @@
 		display: flex;
 		flex-direction: column;
 		flex: 0 0 50%;
-		margin-bottom: 1rem;
+		margin-bottom: 0;
 
-		&:last-of-type {
-			margin-bottom: 0;
-		}
 		@include breakpoint(large) {
-			margin-bottom: 0;
 			flex: 0 0 25%;
 		}
 	}
