--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -19,7 +19,7 @@ body#menu-open {
 
 .theme-changer-wrapper {
   margin-left: auto;
-  margin-right: 2rem;
+  margin-right: 1em;
   cursor: pointer;
 }
 
@@ -207,7 +207,7 @@ nav {
 
       &:after {
         background: var(--alt-black);
-      }      
+      }
     }
 
     &:after {
