css tweaks :poo:

--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -43,7 +43,7 @@
   --svg-fill-color:       hsla(0,0%,100%,0.6);
   --button-bg:            hsl(140, 100%, 76%);
   --button-text-color:    #1e1e1e;
-  --form-color:           hsla(0,0%,100%,0.6);
+  --form-color:           #fff;
   --form-text-color:      rgb(57, 53, 49);
 }
 
@@ -88,7 +88,7 @@
     --svg-fill-color:       rgb(57, 53, 49);
     --button-bg:            rgb(244, 0, 136);
     --button-text-color:    #fff;
-    --form-color:           hsla(0,0%,100%,0.6);
+    --form-color:           #fff;
     --form-text-color:      rgb(57, 53, 49);
   }
 }
