css tweaks :poo: x2

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -200,7 +200,7 @@ nav {
 
     &[aria-current="page"] {
       text-decoration: none;
-      color: #565656;
+      color: var(--heading-color);
       span {
         display: inline-block;
       }
