--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
-@import "reset.scss";
-@import "grid-settings.scss";
-@import "components/components";
-@import "variables/variables";
+@import 'reset.scss';
+@import 'grid-settings.scss';
+@import 'components/components';
+@import 'variables/variables';
 
 html {
   margin: 0px auto;
@@ -9,7 +9,6 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 
 body {
@@ -29,14 +28,16 @@ body {
   min-height: 100vh;
   height: 100%;
   display: grid;
-  grid-template-areas: "Header" "Main-content" "Footer";
+  grid-template-areas: 'Header' 'Main-content' 'Footer';
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
   background: var(--bg);
   margin: 0px auto;
 }
 
-header, footer, #page-wrap {
+header,
+footer,
+#page-wrap {
   max-width: 1600px;
   padding-left: 7%;
   padding-right: 7%;
@@ -89,19 +90,19 @@ textarea {
 
 button {
   --x: 50%;
-	--y: 50%;
-  transition: all .2s ease-in-out;
-	position: relative;
-	appearance: none;
-	padding: 12px 30px;
-	cursor: pointer;
-	outline: none;
-	border-radius: 4px;
+  --y: 50%;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  appearance: none;
+  padding: 12px 30px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 4px;
   font-size: 16px;
   background: var(--button-bg);
   color: var(--button-text-color);
-	// The magic
-	border: 1px solid transparent;
+  // The magic
+  border: 1px solid transparent;
 }
 
 input:invalid,
@@ -109,9 +110,9 @@ textarea:invalid {
   box-shadow: none;
 }
 
-input[type="text"],
-input[type="email"] {
-    -webkit-appearance: none;
+input[type='text'],
+input[type='email'] {
+  -webkit-appearance: none;
 }
 
 .animated {
@@ -167,11 +168,11 @@ h2 {
 
 @keyframes card__moveIn {
   0% {
-      opacity: 0;
-      transform: translateY(20px);
+    opacity: 0;
+    transform: translateY(20px);
   }
   100% {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
