Changing dark mode colour on menu open...

--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -57,7 +57,7 @@
   --border-color: rgba(79, 79, 79, 0.6);
   --nav-border-color: hsla(0, 0%, 100%, 0.6);
   --nav-button: #fff;
-  --nav-bg: #0e0e0e;
+  --nav-bg: #545454;
   --image-gradient: linear-gradient(30deg, hsla(140, 100%, 76%, 0.25), #9cffdb);
   --svg-fill-color: hsla(0, 0%, 100%, 0.6);
   --button-bg: hsl(140, 100%, 76%);
@@ -83,7 +83,7 @@
     --border-color: rgba(79, 79, 79, 0.6);
     --nav-border-color: hsla(0, 0%, 100%, 0.6);
     --nav-button: #fff;
-    --nav-bg: #0e0e0e;
+    --nav-bg: #545454;
     --image-gradient: linear-gradient(
       30deg,
       hsla(140, 100%, 76%, 0.25),
